force-app/main/default/objects/Case_Escalation__c/Case_Escalation__c.object-meta.xml
<CustomObject>
    <label>Case Escalation</label>
    <pluralLabel>Case Escalations</pluralLabel>
    <description>Case Escalation</description>
    <nameField>
        <label>Case Escalation Name</label>
        <type>AutoNumber</type>
        <displayFormat>ESC-{000000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>