force-app/main/default/objects/Case_Escalation__c/fields/Due_At__c.field-meta.xml
<CustomField>
    <fullName>Due_At__c</fullName>
    <label>Due At</label>
    <type>DateTime</type>
    <description>Due At</description>
</CustomField>