force-app/main/default/objects/Case_Escalation__c/fields/Notified_Manager__c.field-meta.xml
<CustomField>
    <fullName>Notified_Manager__c</fullName>
    <label>Notified Manager</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Notified Manager</description>
</CustomField>